# cookiecutter-python-nix

./: .gitignore  LICENSE  README.md  cookiecutter.json
.github/workflows/: test.yml
hooks/: post_gen_project.py
reference/ex_am-ple/: .gitignore  README.md  __main__.py  flake.nix  mypy.ini  pyproject.toml
reference/ex_am-ple/.github/workflows/: test.yml
reference/ex_am-ple/ex_am_ple/: __init__.py  main.py
reference/ex_am-ple/tests/unit/: test_main.py
reference/l_i-b/: .gitignore  README.md  flake.nix  pyproject.toml
reference/l_i-b/.github/workflows/: test.yml
reference/l_i-b/l_i_b/: __init__.py  main.py
reference/l_i-b/tests/unit/: test_main.py
{{cookiecutter.project_name}}/: .pre-commit-config.yaml  LICENSE  __main__.py  flake.nix  mypy.ini  pyproject.toml
{{cookiecutter.project_name}}/.github/workflows/: test.yml
{{cookiecutter.project_name}}/tests/unit/: test_main.py
{{cookiecutter.project_name}}/{{cookiecutter.package_name}}/: __init__.py  main.py
