[project]
name = "{{ cookiecutter.package_name }}"
version = "{{ cookiecutter.version }}"
authors = [
  { name="{{ cookiecutter.full_name }}", email="{{ cookiecutter.email }}" },
]
description = "{{ cookiecutter.description }}"
urls.homepage = "{{ cookiecutter.website }}"
readme = "README.md"
{%- if cookiecutter.license_spdx %}
license = {file = "LICENSE"}
{%- endif %}
classifiers = [
    "Programming Language :: Python :: 3",
{%- if cookiecutter.license_spdx == 'CC0-1.0' %}
    "License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication"
{%- elif cookiecutter.license_spdx == 'MIT' %}
    "License :: OSI Approved :: MIT License"
{%- elif cookiecutter.license_spdx == 'GPL-3.0' %}
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)"
{%- elif cookiecutter.license_spdx == 'GPL-3.0+' %}
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"
{% endif %}
]
requires-python = ">={{ cookiecutter.min_python }}"
dependencies = [] # TODO: list python dependencies
optional-dependencies.test = [
    "pytest", "coverage", "pytest-cov", "mypy", "pytest-mypy",
    "pylama", "pyflakes", "pycodestyle", "pydocstyle", "mccabe",
    "pylint", "eradicate",
]
{%- if cookiecutter.kind == 'application' %}

[project.scripts]
{{ cookiecutter.package_name }} = "{{ cookiecutter.package_name }}:main"
{%- endif %}

[tool.pytest.ini_options]
addopts = "--mypy --pylama --cov --cov-report term-missing --doctest-modules"

[tool.pylama]
linters = "pylint,pyflakes,pycodestyle,pydocstyle,mccabe,eradicate"

[tool.pylama.linter.pydocstyle]
ignore = "D212,D203,D105"

[tool.coverage]
run.source = ["{{ cookiecutter.package_name }}"]
run.branch = true
report.exclude_lines = [ "if __name__ == .__main__.:" ]
report.fail_under = 100
