[project]
name = "{{ cookiecutter.package_name }}"
version = "{{ cookiecutter.version }}"
authors = [
  { name="{{ cookiecutter.full_name }}", email="{{ cookiecutter.email }}" },
]
description = "{{ cookiecutter.description }}"
urls.homepage = "{{ cookiecutter.website }}"
readme = "README.md"
{%- if cookiecutter.license_spdx %}
license = {file = "LICENSE"}
{%- endif %}
classifiers = [
  "Programming Language :: Python :: 3",
{%- if cookiecutter.license_spdx == 'CC0-1.0' %}
  "License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication"
{%- elif cookiecutter.license_spdx == 'MIT' %}
  "License :: OSI Approved :: MIT License"
{%- elif cookiecutter.license_spdx == 'GPL-3.0' %}
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)"
{%- elif cookiecutter.license_spdx == 'GPL-3.0+' %}
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"
{% endif %}
]
requires-python = ">={{ cookiecutter.min_python }}"
dependencies = [] # TODO: list python dependencies
optional-dependencies.test = [
  "pytest",
  "coverage", "pytest-cov",
  "mypy", "pytest-mypy",
  "ruff",
]

[tool.setuptools.package-data]
"*" = ["py.typed"]
{%- if cookiecutter.kind == 'application' %}

[project.scripts]
{{ cookiecutter.package_name }} = "{{ cookiecutter.package_name }}.main:main"
{%- endif %}

[tool.pytest.ini_options]
addopts = "--mypy --cov --cov-report term-missing --doctest-modules"

[tool.coverage]
run.source = [ "{{ cookiecutter.package_name }}" ]
run.branch = true
report.exclude_lines = [
  "# pragma: no cover",
  "if __name__ == .__main__.:",
  "...  # overload",
]
report.fail_under = 100

[tool.mypy]
strict = true

[tool.ruff]
line-length = 79
preview = true
lint.select = [ "ALL" ]
lint.ignore = [
  "D105",  # undocumented-magic-method
  "D203",  # one-blank-line-before-class
  "D213",  # multi-line-summary-second-line
]
lint.per-file-ignores."tests/**" = [
  "INP001",  # implicit-namespace-package
  "S101",  # assert
]
lint.flake8-quotes.inline-quotes = "single"
lint.flake8-quotes.multiline-quotes = "single"
lint.flake8-copyright.notice-rgx = '# SPDX-FileCopyrightText: {{ cookiecutter.initial_year }} {{ cookiecutter.full_name }} <{{ cookiecutter.email }}>\n# SPDX-License-Identifier: {{ cookiecutter.license_spdx }}\n'
format.quote-style = "single"
format.preview = true
