[project]
name = "ex_am_ple"
version = "0.0.1"
authors = [
  { name="Alexander Sosedkin", email="monk@unboiled.info" },
]
description = "TODO: fill in"
urls.homepage = "https://github.com/t184256/ex_am-ple"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication"
]
requires-python = ">=3.10"
dependencies = [] # TODO: list python dependencies
optional-dependencies.test = [
    "pytest",
    "coverage", "pytest-cov",
    "mypy", "pytest-mypy",
    "yapf",
    "ruff",
]

[project.scripts]
ex_am_ple = "ex_am_ple.main:main"

[tool.pytest.ini_options]
addopts = "--mypy --cov --cov-report term-missing --doctest-modules"

[tool.coverage]
run.source = [ "ex_am_ple" ]
run.branch = true
report.exclude_lines = [ "# pragma: no cover", "if __name__ == .__main__.:" ]
report.fail_under = 100

[tool.mypy]
strict = true

[tool.yapf]
BLANK_LINE_BEFORE_MODULE_DOCSTRING = true

[tool.ruff]
line-length = 79
select = [ "ALL" ]
ignore = [
  "D105",  # undocumented-magic-method
  "D203",  # one-blank-line-before-class
  "D213",  # multi-line-summary-second-line
]
per-file-ignores."tests/**" = [
  "INP001",  # implicit-namespace-package
  "S101",  # assert
]
flake8-quotes.inline-quotes = "single"
flake8-quotes.multiline-quotes = "single"
