[project]
name = "ex_am_ple"
version = "0.0.1"
authors = [
  { name="Alexander Sosedkin", email="monk@unboiled.info" },
]
description = "TODO: fill in"
urls.homepage = "https://github.com/t184256/ex_am-ple"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication"
]
requires-python = ">=3.12"
dependencies = [] # TODO: list python dependencies
optional-dependencies.test = [
  "pytest",
  "coverage", "pytest-cov",
  "mypy", "pytest-mypy",
  "ruff",
]

[tool.setuptools.package-data]
"*" = ["py.typed"]

[project.scripts]
ex_am_ple = "ex_am_ple.main:main"

[tool.pytest.ini_options]
addopts = "--mypy --cov --cov-report term-missing --doctest-modules"

[tool.coverage]
run.source = [ "ex_am_ple" ]
run.branch = true
report.exclude_lines = [
  "# pragma: no cover",
  "if __name__ == .__main__.:",
  "...  # overload",
]
report.fail_under = 100

[tool.mypy]
strict = true

[tool.ruff]
line-length = 79
preview = true
lint.select = [ "ALL" ]
lint.ignore = [
  "D105",  # undocumented-magic-method
  "D203",  # one-blank-line-before-class
  "D213",  # multi-line-summary-second-line
  "Q001",  # bad-quotes-multiline-string
]
lint.per-file-ignores."tests/**" = [
  "INP001",  # implicit-namespace-package
  "S101",  # assert
]
lint.flake8-quotes.inline-quotes = "single"
lint.flake8-quotes.multiline-quotes = "single"
lint.flake8-copyright.notice-rgx = '# SPDX-FileCopyrightText: 2023 Alexander Sosedkin <monk@unboiled.info>\n# SPDX-License-Identifier: CC0-1.0\n'
format.quote-style = "single"
format.preview = true
